# meta_debugger

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml
src/: __init__.py  ast_parser.py  debugger.py  meta.py  serializer.py
tests/: __init__.py  conftest.py  test_meta.py
web/: index.html
web/css/: styles.css
web/js/: ast-graph.js  ast-tree.js  editor.js  main.js  pyodide-runner.js
